updated app spacing to avoid footer

--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -178,6 +178,7 @@ input[type=number] {
 }
 
 .game-container {
+  width: 100%;
   height: 90vh;
   background-color: rgba(255,255,255);
   display: flex;
@@ -639,7 +640,7 @@ button {
 
 footer {
   bottom: 0;
-  position: fixed;
+  position: relative;
   width: 100%;
   z-index: 11;
   height: 5em;
